# Virtual-Cam

./: Caddyfile  Cargo.toml
.cargo/: config.toml
scripts/: generate_cert.sh
src/: main.rs
src/codec/simd/: mod.rs  yuv_convert_avx512.rs
src/memory/: huge_pages.rs  mod.rs  pool.rs
src/metrics/: mod.rs
src/net/: io_uring.rs  protocol.rs
src/net/ebpf/: loader.rs  xdp_filter.c
src/pipeline/: hwaccel.rs  mod.rs
src/v4l2/: device.rs  dmabuf.rs  mod.rs
src/web/: handle_ws_simple.rs  server.rs
web/: app.js  dashboard.html  index.html
